WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65629
[Qt][Texmap][REGRESSION]
http://webkit.org/blog-files/transform-style.html
doesn't show composited content
https://bugs.webkit.org/show_bug.cgi?id=65629
Summary
[Qt][Texmap][REGRESSION] http://webkit.org/blog-files/transform-style.html do...
Noam Rosenthal
Reported
2011-08-03 11:32:40 PDT
The above page, and any other page which includes two-pass rendering for transparency, doesn't show the composited content that goes into that intermediate buffer.
Attachments
Patch
(8.28 KB, patch)
2011-08-03 11:37 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Patch
(1.74 KB, patch)
2011-08-03 11:38 PDT
,
Noam Rosenthal
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Noam Rosenthal
Comment 1
2011-08-03 11:37:50 PDT
Created
attachment 102801
[details]
Patch
Noam Rosenthal
Comment 2
2011-08-03 11:38:45 PDT
Created
attachment 102802
[details]
Patch
Benjamin Poulain
Comment 3
2011-08-03 16:04:27 PDT
Comment on
attachment 102802
[details]
Patch Silly #ifdef :)
WebKit Review Bot
Comment 4
2011-08-03 17:22:35 PDT
Comment on
attachment 102802
[details]
Patch Clearing flags on attachment: 102802 Committed
r92337
: <
http://trac.webkit.org/changeset/92337
>
WebKit Review Bot
Comment 5
2011-08-03 17:22:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug