[Qt][Texmap][REGRESSION] http://webkit.org/blog-files/transform-style.html doesn't show composited content https://bugs.webkit.org/show_bug.cgi?id=65629

Reviewed by Benjamin Poulain.

Some non-ES2 initialization was wrongfully #ifdefed in CPU(X86) and thus compiled-out.
When put it in the correct #ifdef, composited layers which require an intermediate buffer
work again.

No new tests. Existing opacity tests in LayoutTests/compositing test this.

* platform/graphics/opengl/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::bind):


Canonical link: https://commits.webkit.org/81464@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92337 268f45cc-cd09-0410-ab3c-d52691b4dbfc